--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,49 +8,161 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="header_top">
-                <div class="header_menu">
-                    <a href='' class="header_logo">
-                        <i class="fad fa-bus-alt header_logo_text header_logo_fontsize"></i>
-                        <p class="header_logo_text">Bus Today</p>
-                    </a>
-                    <div class="header_top_menu">
-                        <a href="" class="aheader_top header_logo_fontsize"><i class="fas fa-bus"></i></a>
-                        <a href="" class="aheader_top header_logo_fontsize">2</a>
-                        <a href="" class="aheader_top header_logo_fontsize">3</a>
-                        <a href="" class="aheader_top header_logo_fontsize"><i class="fas fa-subway"></i></a>
-                        <a href="https://t.me/BusToday" class="aheader_top goto header_logo_fontsize">Go To "Bus Today"
-                            channel</a>
+    <header>
+        <div class="header_top">
+            <div class="header_menu">
+                <a href='' class="header_logo">
+                    <i class="fad fa-bus-alt header_logo_text header_logo_fontsize"></i>
+                    <p class="header_logo_text">Bus Today</p>
+                </a>
+                <div class="header_top_menu">
+                    <a href="" class="aheader_top header_logo_fontsize"><i class="fas fa-bus"></i></a>
+                    <a href="" class="aheader_top header_logo_fontsize">2</a>
+                    <a href="" class="aheader_top header_logo_fontsize">3</a>
+                    <a href="" class="aheader_top header_logo_fontsize"><i class="fas fa-subway"></i></a>
+                    <a href="https://t.me/BusToday" class="aheader_top goto header_logo_fontsize">Go To "Bus Today"
+                        channel</a>
+                </div>
+            </div>
+        </div>
+        <div class="header__bottom">
+            <div class="slider myfirstslider">
+                <div class="slider__line">
+                    <div class="slider__slide"><img src="images/slide_bus_1.jpg" alt="images/slide_bus_1.jpg"></div>
+                    <div class="slider__slide"><img src="images/slide_bus_2.jpg" alt="images/slide_bus_2.jpg"></div>
+                    <div class="slider__slide"><img src="images/slide_troll.jpg" alt="images/slide_troll.jpg"></div>
+                    <div class="slider__slide"><img src="images/slide_tram.jpg" alt="images/slide_tram.jpg"></div>
+                    <div class="slider__slide"><img src="images/slide_rw.jpg" alt="images/slide_rw.jpg"></div>
+                </div>
+                <div class="slider__controls">
+                    <button class="slider__prev">
+                        <div class="slider__prev"><i class="far fa-chevron-circle-left"></i></div>
+                    </button>
+                    <button class="slider__next">
+                        <div class="slider__next"><i class="far fa-chevron-circle-right"></i></div>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="main__top">
+            <div class="slider mysecondslider main__news">
+                <div class="slider__line main__sl">
+                    <div class="slider__slide main__new">
+                        <div>
+                            <h5 class="date">22.03.2020</h5>
+                            <h1 class="newhead">Движение общественного транспорта в городе Ташкент приостановлено</h1>
+                            <div class="newblock">
+                                <img src="images/carantine 22.03.2020.jpg" alt="images/carantine 22.03.2020.jpg"
+                                    class="new__photo">
+                                <div class="newtext">
+                                    <li><span>С 22 марта 2020 года временно прекращается движение общественного
+                                            транспорта
+                                            (автобусов, метро и маршрутных такси) — независимо от формы собственности —
+                                            оказывающего
+                                            услуги перевозчиков по маршрутам на территории Ташкента;</span></li>
+                                    <li>— на местах скопления пассажиров будет распространена информация о временном
+                                        прекращении
+                                        движения общественного транспорта в Ташкенте;</li>
+                                    <li>— для перевозки на работу и обратно сотрудников медицинского персонала больниц и
+                                        клиник
+                                        города Транспортным управлением города Ташкента будут предоставлены специальные
+                                        продезинфицированные автобусы — исходя из численности сотрудников; </li>
+                                    <li>— вместо общественного транспорта будут курсировать такси, продезинфицированные
+                                        Ташкентским
+                                        городским центром санитарно-эпидемиологического благополучия.</li>
+                                    <li>— Каждому такси, которое выезжает в рейс, будут ежедневно выдавать справку о
+                                        дезинфекции от
+                                        ЦСЭБ.</li>
+                                    <li><span>С 22-го марта в Ташкенте разрешается перевозка пассажиров только на
+                                            легковых
+                                            автомобилях, то есть на немаршрутном продезинфицированном такси.</span>
+                                    </li>
+                                    <li><a href="https://t.me/ExoUzbekistana/9274">Источник</a></li>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide main__new">
+                        <div>
+                            <h5 class="date">8.06.2020</h5>
+                            <h1 class="newhead">Движение общественного транспорта в городе Ташкент возобновлено</h1>
+                            <div class="newblock">
+                                <img src="images/re-opening 8.06.2020.jpg" alt="images/carantine 22.03.2020.jpg"
+                                    class="new__photo">
+                                <div class="newtext">
+                                    <li>Мы долго этого ждали, и наконец-то! В "зелёных" и "жёлтых" зонах, возобновляет
+                                        работу общественный транспорт (за исключением метро и маршруток). 8 июня мы, мы
+                                        наконец-то увидим летящюю на полных парах исузу к любимому пассажиру!</li>
+                                    <li><a href="https://t.me/gazetauz/18043">Источник</a></li>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__slide main__new">
+                        <div>
+                            <h5 class="date">9.07.2020</h5>
+                            <h1 class="newhead">Движение общественного транспорта в городе Ташкент вновь приостановлено
+                            </h1>
+                            <div class="newblock">
+                                <img src="images/carantine 10.07.2020.jpg" alt="images/carantine 22.03.2020.jpg"
+                                    class="new__photo">
+                                <div class="newtext">
+                                    <li>С прискорбием сообщаем Вам, что с 10 июля 2020 года, по решению <a
+                                            href="https://t.me/koronavirusinfouz/4664">Решением</a> Специальной
+                                        республиканской комиссии вновь временно прекращается движение общественного
+                                        транспорта. Передвижение по городу разрешено на такси, велосипедах, скутерах, а
+                                        также на личных авто со стикерами старого образца, или без них, <span>с 7:00 до
+                                            10.00 и с 17.00 до 20.00</span>.</li>
+                                    <li><a href="https://t.me/makarenko_channel/1747">Перевод</a></li>
+                                    <li><a href="https://t.me/KoDnu/1213">Фотография</a></li>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__controls">
+                    <button class="slider__prev main__prev">
+                        <div class="slider__prev"><i class="far fa-chevron-circle-left"></i></div>
+                    </button>
+                    <button class="slider__next main__next">
+                        <div class="slider__next"><i class="far fa-chevron-circle-right"></i></div>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="main__bottom">
+            <img src="images/timer.png" alt="images/timer.png" class="bus__image">
+            <div class="mbinform">
+                <li class="mbtext">Скоро увидимся!!!</li>
+                <li class="mbtext">Осталось совсем немного:</li>
+                <div class="secoondomer">
+                    <div class="days secblock1">
+                        <div class="d secblock2">0</div>
+                        Дней
+                    </div>
+                    <div class="hours secblock1">
+                        <div class="h secblock2">00</div>
+                        Часов
+                    </div>
+                    <div class="minutes secblock1">
+                        <div class="m secblock2">00</div>
+                        Минут
+                    </div>
+                    <div class="seconds secblock1">
+                        <div class="s secblock2">00</div>
+                        Секунд
                     </div>
                 </div>
             </div>
-    <div class="slider myfirstslider">
-        <div class="slider__line">
-            <div class="slider__slide"><img src="images/slide_bus_1.jpg" alt="images/slide_bus_1.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_bus_2.jpg" alt="images/slide_bus_2.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_troll.jpg" alt="images/slide_troll.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_tram.jpg" alt="images/slide_tram.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_rw.jpg" alt="images/slide_rw.jpg"></div>
         </div>
-        <div class="slider__controls">
-            <button class="slider__prev"><div class="slider__prev"><i class="far fa-chevron-circle-left"></i></div></button>
-            <button class="slider__next"><div class="slider__next"><i class="far fa-chevron-circle-right"></i></div></button>
-        </div>
-    </div>
-    <div class="slider mysecondslider">
-        <div class="slider__line">
-            <div class="slider__slide"><img src="images/slide_bus_1.jpg" alt="images/slide_bus_1.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_bus_2.jpg" alt="images/slide_bus_2.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_troll.jpg" alt="images/slide_troll.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_tram.jpg" alt="images/slide_tram.jpg"></div>
-            <div class="slider__slide"><img src="images/slide_rw.jpg" alt="images/slide_rw.jpg"></div>
-        </div>
-        <div class="slider__controls">
-            <button class="slider__prev"><div class=""><i class="far fa-chevron-circle-left"></i></div></button>
-            <button class="slider__next"><div class=""><i class="far fa-chevron-circle-right"></i></div></button>
-        </div>
-    </div>
+    </main>
+
     <script src="javascript/script.js"></script>
 </body>
+
 </html>
